--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -2,10 +2,6 @@
 name: Deploy Hugo site to Pages
 
 on:
-  # Runs on pushes targeting the default branch
-  push:
-    branches: ["main"]
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -54,6 +50,7 @@ jobs:
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
         run: |
+          git submodule update --init
           hugo \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
